fix blog overflow.

--- a/assets/scss/mavens/mavens-blog.scss
+++ b/assets/scss/mavens/mavens-blog.scss
@@ -13,6 +13,7 @@
   gap: 20px;
 
   .mavens-blog-card {
+    overflow: hidden;
     background-color: white;
     img {
       width: 334px;
@@ -46,23 +47,26 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      img {
+        object-fit: cover !important;
+      }
     }
 
     .mavens-blog-date {
       margin: 0;
-      margin-left: 28px;
       font-size: 20px;
       color: #717171;
     }
 
     .mavens-date-tags {
       display: flex;
-      align-items: center;
+      flex-direction: column;
       margin-top: 20px;
     }
 
     .mavens-tag-list {
       display: flex;
+      flex-wrap: wrap;
       list-style: none;
       margin: 0;
       gap: 8px;
@@ -87,7 +91,7 @@
       }
     }
   }
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: $breakpoint-lg) {
     .mavens-blog-card {
       display: flex;
       height: 100%;
@@ -116,6 +120,7 @@
       .mavens-date-tags {
         margin-top: auto;
         padding-bottom: 40px;
+        flex-direction: row;
       }
 
       .blog-arrow-icon {
